--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@google/generative-ai": "^0.2.1",
     "africastalking": "^0.7.4",
     "axios": "^1.6.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
