--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/africastalking": "^0.6.2",
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
