--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
@@ -41,7 +42,8 @@
     "pg": "^8.11.3",
     "rate-limiter-flexible": "^4.0.1",
     "twilio": "^4.19.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/africastalking": "^0.6.2",
@@ -49,6 +51,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/csv-parse": "^1.2.5",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^8.5.9",
@@ -57,6 +60,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/papaparse": "^5.3.16",
     "@types/pg": "^8.10.9",
+    "@types/xlsx": "^0.0.36",
     "jest": "^29.7.0",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
