--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
     "papaparse": "^5.5.3",
     "pg": "^8.11.3",
     "rate-limiter-flexible": "^4.0.1",
@@ -58,6 +59,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.3",
     "@types/papaparse": "^5.3.16",
     "@types/pg": "^8.10.9",
     "@types/xlsx": "^0.0.36",
