--- a/frontend/agri-price-tracker/package.json
+++ b/frontend/agri-price-tracker/package.json
@@ -11,41 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.0",
-    "@angular/ssr": "^19.2.3",
+    "@angular/common": "^20.3.15",
+    "@angular/compiler": "^20.3.15",
+    "@angular/core": "^20.3.15",
+    "@angular/forms": "^20.3.15",
+    "@angular/platform-browser": "^20.3.15",
+    "@angular/platform-browser-dynamic": "^20.3.15",
+    "@angular/platform-server": "^20.3.15",
+    "@angular/router": "^20.3.15",
+    "@angular/ssr": "^20.3.13",
+    "@primeuix/themes": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.18",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
     "daisyui": "^5.5.14",
-    "express": "^4.18.2",
+    "express": "^4.22.1",
     "ng2-charts": "^4.1.1",
     "postcss": "^8.5.6",
-    "rxjs": "~7.8.0",
+    "primeng": "^21.0.2",
+    "rxjs": "~7.8.2",
     "tailwindcss": "^4.1.18",
     "tailwindcss-primeui": "^0.6.1",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.3",
-    "@angular/cli": "^19.2.3",
-    "@angular/compiler-cli": "^19.2.0",
-    "@types/chart.js": "^4.0.1",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@angular/build": "^20.3.13",
+    "@angular/cli": "^20.3.13",
+    "@angular/compiler-cli": "^20.3.15",
+    "@types/express": "^4.17.25",
+    "@types/jasmine": "~5.1.13",
+    "@types/node": "^20.19.27",
     "jasmine-core": "~5.6.0",
-    "karma": "~6.4.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "postcss": "^8.5.3",
+    "typescript": "~5.9.3"
   }
 }
