--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "allowImportingTsExtensions": false,
@@ -27,7 +27,7 @@
   },
   "include": [
     "src/**/*"
-, "../frontend/agri-price-tracker/src/app/environments"  ],
+  ],
   "exclude": [
     "node_modules",
     "dist",
