Remove explicit types config to fix Render build

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,8 +11,7 @@
      
     "strict": false,             
     "noImplicitAny": false,      
-    "skipLibCheck": true,        
-    "types": ["node","express"]           
+    "skipLibCheck": true          
   },
   "include": [
     "src/**/*"
