--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,7 +11,9 @@
      
     "strict": false,             
     "noImplicitAny": false,      
-    "skipLibCheck": true          
+    "skipLibCheck": true,  
+    
+    "types": ["node"]
   },
   "include": [
     "src/**/*"
