Remove types config and move @types/node to dependencies

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,9 +11,7 @@
      
     "strict": false,             
     "noImplicitAny": false,      
-    "skipLibCheck": true,  
-    
-    "types": ["node"]
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
