--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,6 +11,7 @@
     
     "strict": false,
     "noImplicitAny": false,
+    "useUnknownInCatchVariables": false,
     "skipLibCheck": true
      
   },
